# Homework4_RL

./: Comandi_lancio
rl_fra2mo_description/: CMakeLists.txt
rl_fra2mo_description/config/: aruco_goal.yaml
rl_fra2mo_description/launch/: fra2mo_explore.launch.py  fra2mo_slam.launch.py  nav_aruco.launch.py
rl_fra2mo_description/scripts/: follow_waypoints.py  vision_based_navigation.py
rl_fra2mo_description/src/: aruco_pose.cpp  odom_bl_tf.cpp
